# AimCalibrate

./: README.md  index.html  package-lock.json  package.json  tauri.conf.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: calculations.rs  commands.rs  main.rs  models.rs  mouse_tracker.rs  utils.rs
src/pages/: Converter.jsx  MainSensitivity.jsx  MeasureFov.jsx  MeasureYaw.jsx  MessureFov.jsx  ScopedSensitivity.jsx  Settings.jsx
