[package]
name = "aimcalibrate"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "global-shortcut"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.0.14"
winapi = { version = "0.3", features = ["winuser"] }
lazy_static = "1.4.0"
once_cell = "1.17.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
